--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,53 +1,53 @@
 site_name: RL Exploration Logs
 site_url: https://example.com
-docs_dir: docs
 theme:
-  name: material
-  font:
-    text: Merriweather Sans
-    code: Red Hat Mono
-  
-  logo: assets/rl_logo.png
-  favicon: assets/favicon.ico
-  features:
-    - navigation.footer
-  palette: 
-    # Dark Mode
-    - scheme: slate
-      toggle:
-        icon: material/weather-sunny
-        name: Dark Mode
-      primary: green
-      accent: deep purple
-
-    # Light Mode
-    - scheme: default
-      toggle:
-        icon: material/weather-night
-        name: Light Mode
-      primary: light blue
-      accent: deep orange
+   name: material
+   font:
+     text: Merriweather Sans
+     code: Red Hat Mono
+   icon:
+     logo: material/pokemon-go
+   features:
+     - navigation.footer
+   palette: 
+     # Dark Mode
+     - scheme: slate
+       toggle:
+         icon: material/weather-sunny
+         name: Dark Mode
+       primary: green
+       accent: deep purple
+ 
+     # Light Mode
+     - scheme: default
+       toggle:
+         icon: material/weather-night
+         name: Light Mode
+       primary: light blue
+       accent: deep orange
 markdown_extensions:
-  - attr_list
-  - pymdownx.emoji:
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
-  - pymdownx.highlight:
-      anchor_linenums: true
-      line_spans: __span
-      pygments_lang_class: true
-  - pymdownx.inlinehilite
-  - pymdownx.snippets
-  - pymdownx.superfences
-  - pymdownx.tabbed:
-      alternate_style: true
-  - admonition
-  - pymdownx.details
-  - pymdownx.superfences:
-      custom_fences:
-        - name: mermaid
-          class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format
+   - attr_list
+   - pymdownx.emoji:
+       emoji_index: !!python/name:material.extensions.emoji.twemoji
+       emoji_generator: !!python/name:material.extensions.emoji.to_svg
+markdown_extensions:
+   - pymdownx.highlight:
+       anchor_linenums: true
+       line_spans: __span
+       pygments_lang_class: true
+   - pymdownx.inlinehilite
+   - pymdownx.snippets
+   - pymdownx.superfences
+   - pymdownx.superfences
+   - pymdownx.tabbed:
+       alternate_style: true
+   - admonition
+   - pymdownx.details
+   - pymdownx.superfences:
+       custom_fences:
+         - name: mermaid
+           class: mermaid
+           format: !!python/name:pymdownx.superfences.fence_code_format
 extra:
   social:
     - icon: material/github
